--- a/requirements.txt
+++ b/requirements.txt
@@ -23,11 +23,13 @@ Levenshtein==0.26.1
 markdown-it-py==3.0.0
 MarkupSafe==3.0.2
 mdurl==0.1.2
-numpy==2.2.1
+numpy==1.26.4
 openpyxl==3.1.5
 packaging==24.2
 pandas==2.2.3
 pillow==11.0.0
+psycopg==3.2.4
+psycopg2-binary==2.9.10
 pycparser==2.22
 Pygments==2.18.0
 PyJWT==2.10.1
